# products-and-orders-api---i06-products-and-orders-api-29017-29184-pre_prod

./: .env.example  .function_call_history  .gitignore  .task_tracker.json  Dockerfile  README.md  create_tables.py  docker-compose.yml  pyproject.toml
.knowledge/: .knowledge.json  _app_data_T0015_33915_herrera-luis-ioet_products-and-orders-api---i06-products-and-orders-api-29017-29184-pre_prod_README.md  _app_data_T0015_33915_herrera-luis-ioet_products-and-orders-api---i06-products-and-orders-api-29017-29184-pre_prod_app___init__.py  _app_data_T0015_33915_herrera-luis-ioet_products-and-orders-api---i06-products-and-orders-api-29017-29184-pre_prod_app_api___init__.py  _app_data_T0015_33915_herrera-luis-ioet_products-and-orders-api---i06-products-and-orders-api-29017-29184-pre_prod_app_api_v1___init__.py  _app_data_T0015_33915_herrera-luis-ioet_products-and-orders-api---i06-products-and-orders-api-29017-29184-pre_prod_app_api_v1_api.py  _app_data_T0015_33915_herrera-luis-ioet_products-and-orders-api---i06-products-and-orders-api-29017-29184-pre_prod_app_api_v1_endpoints___init__.py  _app_data_T0015_33915_herrera-luis-ioet_products-and-orders-api---i06-products-and-orders-api-29017-29184-pre_prod_app_api_v1_endpoints_orders.py  _app_data_T0015_33915_herrera-luis-ioet_products-and-orders-api---i06-products-and-orders-api-29017-29184-pre_prod_app_api_v1_endpoints_products.py  _app_data_T0015_33915_herrera-luis-ioet_products-and-orders-api---i06-products-and-orders-api-29017-29184-pre_prod_app_config.py  (+106 more)
app/: __init__.py  config.py  database.py  dependencies.py  errors.py  (+2 more)
(+48 files in other folders)
